--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "pydantic>=2.6.0",
     "pydantic-settings>=2.1.0",
     "metro-mdp",
+    "slowapi>=0.1.9",
 ]
 
 [project.optional-dependencies]
